--- a/hw/xfree86/os-support/bsd/Makefile.am
+++ b/hw/xfree86/os-support/bsd/Makefile.am
@@ -1,7 +1,5 @@
 noinst_LTLIBRARIES = libbsd.la
 
-# FIXME: Add USB mouse support?
-
 # APM support.
 if BSD_KQUEUE_APM
 APM_SOURCES = $(srcdir)/bsd_kqueue_apm.c
@@ -78,14 +76,4 @@ libbsd_la_SOURCES = \
 
 # FIXME: Add these files to the build as needed
 EXTRA_DIST = \
-	bsd_apm.c \
-	bsd_kqueue_apm.c \
-	memrange.h \
-	libusb/data.c \
-	libusb/descr.c \
-	libusb/parse.c \
-	libusb/usage.c \
-	libusb/usb.3 \
-	libusb/usb.h \
-	libusb/usb_hid_usages \
-	libusb/usbvar.h
+	memrange.h
