--- a/configure.ac
+++ b/configure.ac
@@ -1878,6 +1878,7 @@ hw/vfb/Makefile
 hw/xnest/Makefile
 hw/xwin/Makefile
 hw/xquartz/Makefile
+hw/xquartz/GL/Makefile
 hw/xquartz/bundle/Makefile
 hw/xquartz/doc/Makefile
 hw/xquartz/mach-startup/Makefile
