XQuartz: Added option to enable/disable test extensions
defaults write org.x.X11 enable_test_extensions -boolean true
(cherry picked from commit fd4710aff3723d5f3422cf6a6530172eafc556d9)
(cherry picked from commit 635019ad18db921fec99256294debd8571074abf)

--- a/hw/xquartz/mach-startup/Makefile.am
+++ b/hw/xquartz/mach-startup/Makefile.am
@@ -39,6 +39,11 @@ X11_LDFLAGS += \
 	-Wl,-framework,OpenGL
 endif
 
+if RECORD
+X11_LDADD += \
+	$(top_builddir)/record/librecord.la
+endif
+
 bin_PROGRAMS = Xquartz
 
 dist_Xquartz_SOURCES = \
