Add visibility flags to XSERVER_CFLAGS.
  This is done to actually change DIX_CFLAGS, as not all "modules" use
XORG_CFLAGS.
  Also export the symbols that are required by other modules after
the change.

--- a/configure.ac
+++ b/configure.ac
@@ -1266,6 +1266,7 @@ if test "x$XORG" = xyes; then
 	    if test x$have_visibility != xno; then
 		symbol_visibility=$VISIBILITY_CFLAGS
 		XORG_CFLAGS="$XORG_CFLAGS $VISIBILITY_CFLAGS"
+		XSERVER_CFLAGS="$XSERVER_CFLAGS $VISIBILITY_CFLAGS"
 	    fi
 	fi
 	dnl added to xorg-server.pc
