Add atKeynames.h to libdmxinput_a_SOURCES so it's included in tarballs
Reported by geearu in #xorg-devel

--- a/hw/dmx/input/Makefile.am
+++ b/hw/dmx/input/Makefile.am
@@ -49,6 +49,7 @@ DMXSRCS = dmxinputinit.c \
 
 libdmxinput_a_SOURCES = ChkNotMaskEv.c \
                         ChkNotMaskEv.h \
+                        atKeynames.h \
                         $(RAWSRCS) \
                         $(USBSRCS) \
                         $(DRVSRCS) \
