XQuartz: pbproxy: Simplify linking (cherry picked from commit 909cc5c4dca0f63e90505575bbd454b46a4670cc)

--- a/configure.ac
+++ b/configure.ac
@@ -1598,8 +1598,7 @@ if test "x$XQUARTZ" = xyes; then
 
 	CFLAGS="${CFLAGS} -DROOTLESS_WORKAROUND -DNO_ALLOCA"
 
-	PKG_CHECK_MODULES(APPLEWMPROTO, [applewmproto >= 1.1.1])
-	PKG_CHECK_MODULES(APPLEWM, [applewm >= 1.0.0])
+	PKG_CHECK_MODULES(XPBPROXY, [applewmproto >= 1.1.1] [applewm >= 1.0.0] xfixes fixesproto)
 
 	if test "x$STANDALONE_XPBPROXY" = xyes ; then
 		AC_DEFINE(STANDALONE_XPBPROXY,1,[Build a standalone xpbproxy])
