--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ cscope*
 local
 aclocal.m4
 autom4te.cache
+ChangeLog
 compile
 config.guess
 config.log
@@ -27,6 +28,7 @@ configure
 configure.lineno
 depcomp
 doltcompile
+doltlibtool
 install-sh
 libtool
 ltmain.sh
@@ -36,9 +38,13 @@ tags
 cscope*
 ylwrap
 xorg-server.pc
+xorg-server-*.tar.bz2
+xorg-server-*.tar.gz
 stamp-h?
 do-not-use-config.h
 do-not-use-config.h.in
+dix/dix.c
+os/os.c
 doc/Xserver.1x
 doc/Xserver.man
 hw/dmx/Xdmx
@@ -95,20 +101,6 @@ hw/xfree86/utils/cvt/cvt.man
 hw/xfree86/utils/gtf/gtf
 hw/xfree86/utils/gtf/gtf.1x
 hw/xfree86/utils/gtf/gtf.man
-hw/xfree86/utils/ioport/inb
-hw/xfree86/utils/ioport/inl
-hw/xfree86/utils/ioport/inw
-hw/xfree86/utils/ioport/ioport
-hw/xfree86/utils/ioport/outb
-hw/xfree86/utils/ioport/outl
-hw/xfree86/utils/ioport/outw
-hw/xfree86/utils/xorgcfg/XOrgCfg
-hw/xfree86/utils/xorgcfg/xorgcfg
-hw/xfree86/utils/xorgcfg/xorgcfg.1x
-hw/xfree86/utils/xorgcfg/xorgcfg.man
-hw/xfree86/utils/xorgconfig/xorgconfig
-hw/xfree86/utils/xorgconfig/xorgconfig.1x
-hw/xfree86/utils/xorgconfig/xorgconfig.man
 hw/xfree86/xaa/l-xaaBitmap.c
 hw/xfree86/xaa/l-xaaStipple.c
 hw/xfree86/xaa/l-xaaTEGlyph.c
@@ -131,53 +123,6 @@ hw/xfree86/xaa/mf3-xaaBitmap.c
 hw/xfree86/xaa/mf3-xaaStipple.c
 hw/xfree86/xaa/s-xaaDashLine.c
 hw/xfree86/xaa/s-xaaLine.c
-hw/xfree86/xf1bpp/maskbits.c
-hw/xfree86/xf1bpp/mfbbitblt.c
-hw/xfree86/xf1bpp/mfbbltC.c
-hw/xfree86/xf1bpp/mfbbltCI.c
-hw/xfree86/xf1bpp/mfbbltG.c
-hw/xfree86/xf1bpp/mfbbltO.c
-hw/xfree86/xf1bpp/mfbbltX.c
-hw/xfree86/xf1bpp/mfbbres.c
-hw/xfree86/xf1bpp/mfbbresd.c
-hw/xfree86/xf1bpp/mfbclip.c
-hw/xfree86/xf1bpp/mfbcmap.c
-hw/xfree86/xf1bpp/mfbfillarc.c
-hw/xfree86/xf1bpp/mfbfillrct.c
-hw/xfree86/xf1bpp/mfbfillsp.c
-hw/xfree86/xf1bpp/mfbfont.c
-hw/xfree86/xf1bpp/mfbgc.c
-hw/xfree86/xf1bpp/mfbgetsp.c
-hw/xfree86/xf1bpp/mfbigbblak.c
-hw/xfree86/xf1bpp/mfbigbwht.c
-hw/xfree86/xf1bpp/mfbhrzvert.c
-hw/xfree86/xf1bpp/mfbimage.c
-hw/xfree86/xf1bpp/mfbline.c
-hw/xfree86/xf1bpp/mfbmisc.c
-hw/xfree86/xf1bpp/mfbpablack.c
-hw/xfree86/xf1bpp/mfbpainv.c
-hw/xfree86/xf1bpp/mfbpawhite.c
-hw/xfree86/xf1bpp/mfbpgbblak.c
-hw/xfree86/xf1bpp/mfbpgbinv.c
-hw/xfree86/xf1bpp/mfbpgbwht.c
-hw/xfree86/xf1bpp/mfbpixmap.c
-hw/xfree86/xf1bpp/mfbplyblack.c
-hw/xfree86/xf1bpp/mfbplyinv.c
-hw/xfree86/xf1bpp/mfbplywhite.c
-hw/xfree86/xf1bpp/mfbpntwin.c
-hw/xfree86/xf1bpp/mfbpolypnt.c
-hw/xfree86/xf1bpp/mfbpushpxl.c
-hw/xfree86/xf1bpp/mfbscrclse.c
-hw/xfree86/xf1bpp/mfbscrinit.c
-hw/xfree86/xf1bpp/mfbseg.c
-hw/xfree86/xf1bpp/mfbsetsp.c
-hw/xfree86/xf1bpp/mfbteblack.c
-hw/xfree86/xf1bpp/mfbtewhite.c
-hw/xfree86/xf1bpp/mfbtileC.c
-hw/xfree86/xf1bpp/mfbtileG.c
-hw/xfree86/xf1bpp/mfbwindow.c
-hw/xfree86/xf1bpp/mfbzerarc.c
-hw/xfree86/xf4bpp/mfbseg.c
 hw/xfree86/xorg.c
 hw/xfree86/xorg.conf.example
 hw/xfree86/xorg.conf.example.pre
@@ -191,31 +136,12 @@ hw/xquartz/mach-startup/mach_startupUser.c
 hw/xquartz/mach-startup/X11
 hw/xquartz/mach-startup/Xquartz
 hw/xquartz/doc/Xquartz.1
+hw/xwin/winprefslex.c
+hw/xwin/winprefsyacc.c
+hw/xwin/winprefsyacc.h
 include/dix-config.h
 include/kdrive-config.h
-include/xgl-config.h
 include/xkb-config.h
 include/xorg-config.h
 include/xorg-server.h
 include/xwin-config.h
-mfb/mfbbltC.c
-mfb/mfbbltCI.c
-mfb/mfbbltG.c
-mfb/mfbbltO.c
-mfb/mfbbltX.c
-mfb/mfbigbblak.c
-mfb/mfbigbwht.c
-mfb/mfbpablack.c
-mfb/mfbpainv.c
-mfb/mfbpawhite.c
-mfb/mfbpgbblak.c
-mfb/mfbpgbinv.c
-mfb/mfbpgbwht.c
-mfb/mfbplyblack.c
-mfb/mfbplyinv.c
-mfb/mfbplywhite.c
-mfb/mfbseg.c
-mfb/mfbteblack.c
-mfb/mfbtewhite.c
-mfb/mfbtileC.c
-mfb/mfbtileG.c
