Cygwin/X: Fix some remaining build issues
Fixes for a few remaining build issues, omitted from commmit 6e85a8304b50c0bfd16a400a05d257f0168fb99b in error

Provide VENDOR_RELEASE in XORG_VERSION_CURRENT for XWin
Remove -static from linker flags for XWin

Signed-off-by: Jon TURNEY <jon.turney@dronecode.org.uk>

--- a/configure.ac
+++ b/configure.ac
@@ -1544,6 +1544,7 @@ fi
 AC_MSG_RESULT([$XWIN])
 
 if test "x$XWIN" = xyes; then
+	AC_DEFINE_UNQUOTED(XORG_VERSION_CURRENT, [$VENDOR_RELEASE], [Current Xorg version])
 	AC_CHECK_TOOL(WINDRES, windres)
 	case $host_os in
 		cygwin*)
