XQuartz: Name the startup shell script X11 for better compatability (cherry picked from commit f84613d6fcbbb5f769ee34cff0900353a13693cf)

--- a/hw/xquartz/mach-startup/Makefile.am
+++ b/hw/xquartz/mach-startup/Makefile.am
@@ -4,16 +4,16 @@ AM_CPPFLAGS = \
 	-DX11BINDIR=\"$(bindir)\"
 
 x11appdir = $(APPLE_APPLICATIONS_DIR)/X11.app/Contents/MacOS
-x11app_PROGRAMS = X11
+x11app_PROGRAMS = X11.bin
 
-dist_X11_SOURCES = \
+dist_X11_bin_SOURCES = \
 	bundle-main.c 
 
-nodist_X11_SOURCES = \
+nodist_X11_bin_SOURCES = \
 	mach_startupServer.c \
 	mach_startupUser.c
 
-X11_LDADD = \
+X11_bin_LDADD = \
 	$(top_builddir)/hw/xquartz/libXquartz.la \
 	$(top_builddir)/hw/xquartz/xpr/libXquartzXpr.la \
 	$(top_builddir)/dix/dixfonts.lo \
@@ -21,7 +21,7 @@ X11_LDADD = \
 	$(top_builddir)/hw/xquartz/pbproxy/libxpbproxy.la \
 	$(DARWIN_LIBS) $(XSERVER_LIBS) $(XSERVER_SYS_LIBS) -lXplugin
 
-X11_LDFLAGS =  \
+X11_bin_LDFLAGS =  \
 	-XCClinker -Objc \
 	-Wl,-u,_miDCInitialize \
 	-Wl,-framework,Carbon \
@@ -30,17 +30,17 @@ X11_LDFLAGS =  \
 	-Wl,-framework,IOKit
 
 if GLX
-X11_LDADD += \
+X11_bin_LDADD += \
 	$(top_builddir)/hw/xquartz/GL/libCGLCore.la \
 	$(top_builddir)/glx/libglx.la
 
-X11_LDFLAGS += \
+X11_bin_LDFLAGS += \
 	-L/System/Library/Frameworks/OpenGL.framework/Libraries -lGL \
 	-Wl,-framework,OpenGL
 endif
 
 if RECORD
-X11_LDADD += \
+X11_bin_LDADD += \
 	$(top_builddir)/record/librecord.la
 endif
 
