Add xace headers to the SDK when enabled and export the XaceHooks symbol to modules.

--- a/Xext/Makefile.am
+++ b/Xext/Makefile.am
@@ -73,6 +73,9 @@ endif
 XACE_SRCS = xace.c xace.h xacestr.h
 if XACE
 BUILTIN_SRCS += $(XACE_SRCS)
+if XORG
+sdk_HEADERS += xace.h xacestr.h
+endif
 endif
 
 # SELinux extension: provides SELinux policy support for X objects
