Fix sdksyms.sh to work with Solaris/Sun compiler builds
 - Pass $(CPP) & $(AWK) settings from configure to sdksyms.sh
 - Only reset sdk variable (tracks if header is part of sdk) if
   a filename is included on the cpp # <line-no> <filename> line,
   since Sun compilers omit filename when it is unchanged from
   previous line.

--- a/hw/xfree86/loader/Makefile.am
+++ b/hw/xfree86/loader/Makefile.am
@@ -24,4 +24,4 @@ libloader_la_SOURCES = \
 CLEANFILES = sdksyms.c
 
 sdksyms.c: sdksyms.sh
-	$(srcdir)/sdksyms.sh $(top_srcdir) $(AM_CFLAGS) $(CFLAGS) $(INCLUDES)
+	CPP='$(CPP)' AWK='$(AWK)' $(srcdir)/sdksyms.sh $(top_srcdir) $(AM_CFLAGS) $(CFLAGS) $(INCLUDES)
