Improve sdksyms.c automatic generation (Fix #19245).
  Since it is already parsing cpp output, create a dependency file
in the same process. This will cause sdksyms.c to be regenerated
whenever a sdk header is modified.
  This also uses the gmake 'sinclude' directive (don't fail if
included file doesn't exist). This should not cause any problems
given that gmake only constructs are used in several other Makefiles.

--- a/hw/xfree86/loader/Makefile.am
+++ b/hw/xfree86/loader/Makefile.am
@@ -21,7 +21,9 @@ libloader_la_SOURCES = \
 	os.c \
 	sdksyms.c
 
-CLEANFILES = sdksyms.c
+CLEANFILES = sdksyms.c sdksyms.dep
 
-sdksyms.c: sdksyms.sh
+sdksyms.dep sdksyms.c: sdksyms.sh
 	CPP='$(CPP)' AWK='$(AWK)' $(srcdir)/sdksyms.sh $(top_srcdir) $(AM_CFLAGS) $(CFLAGS) $(INCLUDES)
+
+sinclude sdksyms.dep
