--- a/hw/xfree86/common/Makefile.am
+++ b/hw/xfree86/common/Makefile.am
@@ -13,6 +13,10 @@ if XF86VIDMODE
 XF86VMODE_SDK = vidmodeproc.h
 endif
 
+if DGA
+DGASOURCES = xf86DGA.c
+endif
+
 XISOURCES = xf86Xinput.c xisb.c
 XISDKINCS = xf86Xinput.h xisb.h
 RANDRSOURCES = xf86RandR.c
