--- a/hw/xfree86/modes/Makefile.am
+++ b/hw/xfree86/modes/Makefile.am
@@ -1,19 +1,23 @@
 noinst_LTLIBRARIES = libxf86modes.la
 
+if DGA
+DGA_SRCS = xf86DiDGA.c
+endif
+
 libxf86modes_la_SOURCES = \
 	xf86Crtc.c \
 	xf86Crtc.h \
 	xf86Cursors.c \
 	xf86cvt.c \
 	xf86gtf.c \
-	xf86DiDGA.c \
 	xf86EdidModes.c \
 	xf86Modes.c \
 	xf86Modes.h \
 	xf86RandR12.c \
 	xf86RandR12.h \
 	xf86Rename.h \
-	xf86Rotate.c
+	xf86Rotate.c \
+        $(DGA_SRCS)
 
 INCLUDES = $(XORG_INCS) -I$(srcdir)/../ddc -I$(srcdir)/../i2c \
 	   -I$(srcdir)/../loader -I$(srcdir)/../rac -I$(srcdir)/../parser \
