Add sdksyms.sh to EXTRA_DIST to correct make distcheck
  Thanks to <vehemens at verizon.net> for noticing the problem.

--- a/hw/xfree86/loader/Makefile.am
+++ b/hw/xfree86/loader/Makefile.am
@@ -10,7 +10,8 @@ AM_CFLAGS = $(DIX_CFLAGS) $(XORG_CFLAGS)
 EXTRA_DIST = \
 	dlloader.h \
 	loader.h \
-	loaderProcs.h
+	loaderProcs.h \
+	sdksyms.sh
 
 libloader_la_SOURCES = \
 	loader.c \
