--- a/include/dix-config.h.in
+++ b/include/dix-config.h.in
@@ -363,19 +363,6 @@
 /* Vendor name */
 #undef XVENDORNAME
 
-/* Endian order */
-#undef _X_BYTE_ORDER
-/* Deal with multiple architecture compiles on Mac OS X */
-#ifndef __APPLE_CC__
-#define X_BYTE_ORDER _X_BYTE_ORDER
-#else
-#ifdef __BIG_ENDIAN__
-#define X_BYTE_ORDER X_BIG_ENDIAN
-#else
-#define X_BYTE_ORDER X_LITTLE_ENDIAN
-#endif
-#endif
-
 /* Enable GNU and other extensions to the C environment for GLIBC */
 #undef _GNU_SOURCE
 
@@ -441,5 +428,7 @@
 
 /* Define to 1 if you have the `ffs' function. */
 #undef HAVE_FFS
+
+#include <dix-config-post-verbatim.h>
 
 #endif /* _DIX_CONFIG_H_ */
